# chat-lyra

./: package.json  pnpm-lock.yaml  tsconfig.node.json  uno.config.ts  vite.config.ts
.cursor/rules/: no-examples-unless-requested.mdc
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json  tauri.schema.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2025-05-07-054018_create_conversation/: up.sql
src-tauri/src/: db.rs  hotkey.rs  main.rs  store.rs  translate.rs  tray.rs  window.rs
src/apis/: stream-request.ts
src/apis/open-router/: api.ts  http.ts
src/assets/css/: reset.css
src/components/: Icon.tsx
src/config/: open-router.ts
src/constant/: theme.ts
src/provider/: MUIThemeProvider.tsx
src/setting/: App.css  App.tsx  index.html  main.tsx
src/setting/layout/: SideMenu.tsx
src/setting/pages/: Base.tsx  MCP.tsx  ModelProvider.tsx
src/translate/: App.css  App.tsx  index.html
src/types/: model.ts
src/workbench/: App.css  App.tsx  index.html
src/workbench/layout/: Layout.tsx
src/workbench/pages/chat/: index.tsx
src/workbench/pages/chat/components/: MessageInput.tsx
src/workbench/pages/chat/core/: conversation.ts  message.ts
src/workbench/pages/chat/hooks/: useChat.ts
src/workbench/store/: models.ts
