[package]
name = "chat-lyra"
version = "0.1.0"
description = "A simple chat app"
authors = ["jieyuhua9193@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["unstable", "tray-icon"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
diesel = { version = "2.2.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-single-instance = "2.2.3"
tauri-plugin-shell = "2.2.0"
tauri-plugin-log = "2.4.0"
tauri-plugin-os = "2.2.1"
